# harvestrs

./: .coderabbit.yaml  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  dedup.rs  main.rs  sync.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  source.rs  types.rs
crates/sources/: Cargo.toml
crates/sources/src/: facets.rs  git.rs  lib.rs  memory.rs  obsidian.rs  pieces.rs
