[workspace]
members = ["crates/core", "crates/sources", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["joe"]

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
dirs = "5"
