[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "harvestrs"
path = "src/main.rs"

[dependencies]
harvester-core = { path = "../core" }
sources = { path = "../sources" }
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
clap.workspace = true
rusqlite.workspace = true
walkdir.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
