[package]
name = "sources"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
harvester-core = { path = "../core" }
serde_json.workspace = true
async-trait.workspace = true
walkdir.workspace = true
reqwest.workspace = true
git2.workspace = true
tokio.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
